--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <style type="text/css">
 <!--
 body {
-background-image: url(placeholder.png);
-background-repeat: no-repeat;
+background-color:black;
 }
 -->
 </style>
